--- a/index.html
+++ b/index.html
@@ -1,11 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Burst</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+      *{
+        font-family: 'Lato', sans-serif;
+      }
+    </style>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+      </script>
 </head>
 <body>
-    
+    <header class="container mx-auto my-5">
+        <div class="navbar lg:bg-orange-600 rounded-[600px] text-black lg:text-white">
+            <div class="navbar-start">
+                <ul class="menu menu-horizontal px-1 hidden lg:flex">
+                    <li><a>Home</a></li>
+                    <li><a>About Us</a></li>
+                    <li><a>Shop</a></li>
+                    <li><a>All Fruits</a></li>
+                  </ul>
+              <img class="lg:hidden" src="images/logo.png" alt="">
+              <a class="btn btn-ghost normal-case text-xl lg:hidden">Fruit Burst</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <img src="images/logo.png" alt="">
+              <a class="btn btn-ghost normal-case text-xl">Fruit Burst</a>
+            </div>
+            <div class="navbar-end">
+                <div class="form-control">
+                    <input type="text" placeholder="Search" class="input input-bordered border-0 w-24 md:w-auto rounded-[60px] hidden lg:block"/>  
+                </div>
+                    <div class="dropdown dropdown-left">
+                        <label tabindex="0" class="btn btn-ghost lg:hidden">
+                          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                        </label>
+                        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3  shadow bg-base-100 bg-opacity-10 rounded-box w-40">
+                            <li><a>Home</a></li>
+                            <li><a>About Us</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>All Fruits</a></li>
+                        </ul>
+                      </div>              
+            </div>
+          </div>
+          <!-- banner section -->
+          <div class="p-5 md:p=0">
+          <div class="carousel w-full mt-5">
+            <div id="slide1" class="carousel-item relative w-full">
+                    <div class="hero" style="background-image: url(images/banner1.png);">
+                        <div class="hero-overlay bg-opacity-60"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                          <div class="max-w-md">
+                            <h1 class="mt-10 mb-5 md:mb-5 text-4xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
+                            <p class="mb-6 font-medium">We supply highly quality organic products</p>
+                            <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-5 md:mb-20">Shop Now</button>
+                          </div>
+                        </div>
+                      </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle text-white bg-[#121212] border-black">❮</a> 
+                <a href="#slide2" class="btn btn-circle text-white bg-[#121212] border-black">❯</a>
+              </div>
+            </div> 
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="hero" style="background-image: url(images/banner2.png);">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content">
+                      <div class="max-w-md">
+                        <h1 class="mt-10 mb-5 md:mb-5 text-4xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
+                        <p class="mb-6 font-medium">We supply highly quality organic products</p>
+                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-5 md:mb-20">Shop Now</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle text-white bg-[#121212] border-black">❮</a> 
+                <a href="#slide3" class="btn btn-circle text-white bg-[#121212] border-black">❯</a>
+              </div>
+            </div> 
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="hero" style="background-image: url(images/banner3.png);">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content">
+                      <div class="max-w-md">
+                        <h1 class="mt-10 mb-5 md:mb-5 text-4xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
+                        <p class="mb-6 font-medium">We supply highly quality organic products</p>
+                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-5 md:mb-20">Shop Now</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle text-white bg-[#121212] border-black">❮</a> 
+                <a href="#slide4" class="btn btn-circle text-white bg-[#121212] border-black">❯</a>
+              </div>
+            </div> 
+            <div id="slide4" class="carousel-item relative w-full">
+                <div class="hero" style="background-image: url(images/banner4.png);">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content">
+                      <div class="max-w-md">
+                        <h1 class="mt-10 mb-5 md:mb-5 text-4xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
+                        <p class="mb-6 font-medium">We supply highly quality organic products</p>
+                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-5 md:mb-20">Shop Now</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle text-white bg-[#121212] border-black">❮</a> 
+                <a href="#slide1" class="btn btn-circle text-white bg-[#121212] border-black">❯</a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </header>
 </body>
 </html>
