--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
             </div>
           </div>
           <!-- banner section -->
-          <div class="p-5 md:p=0">
+          <div class="p-2 lg:p-0">
           <div class="carousel w-full mt-5">
             <div id="slide1" class="carousel-item relative w-full">
-                    <div class="hero" style="background-image: url(images/banner1.png);">
-                        <div class="hero-overlay bg-opacity-60"></div>
-                        <div class="hero-content text-center text-neutral-content">
-                          <div class="max-w-md">
-                            <h1 class="mt-10 mb-5 md:mb-5 text-4xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
-                            <p class="mb-6 font-medium">We supply highly quality organic products</p>
-                            <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-5 md:mb-20">Shop Now</button>
-                          </div>
-                        </div>
+                <div class="hero" style="background-image: url(images/banner1.png);">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content">
+                      <div class="max-w-md">
+                        <h1 class=" md:mt-10 mb-md:mb-5 text-3xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
+                        <p class="mb-5 font-medium">We supply highly quality organic products</p>
+                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-20 md:mb-40 hover:text-[#F85559] hover:bg-white">Shop Now</button>
                       </div>
+                    </div>
+                  </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle text-white bg-[#121212] border-black">❮</a> 
                 <a href="#slide2" class="btn btn-circle text-white bg-[#121212] border-black">❯</a>
@@ -82,9 +82,9 @@
                     <div class="hero-overlay bg-opacity-60"></div>
                     <div class="hero-content text-center text-neutral-content">
                       <div class="max-w-md">
-                        <h1 class="mt-10 mb-5 md:mb-5 text-4xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
-                        <p class="mb-6 font-medium">We supply highly quality organic products</p>
-                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-5 md:mb-20">Shop Now</button>
+                        <h1 class="md:mt-10 mb-md:mb-5 text-3xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
+                        <p class="mb-5 font-medium">We supply highly quality organic products</p>
+                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-20 md:mb-40 hover:text-[#F85559] hover:bg-white">Shop Now</button>
                       </div>
                     </div>
                   </div>
@@ -98,9 +98,9 @@
                     <div class="hero-overlay bg-opacity-60"></div>
                     <div class="hero-content text-center text-neutral-content">
                       <div class="max-w-md">
-                        <h1 class="mt-10 mb-5 md:mb-5 text-4xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
-                        <p class="mb-6 font-medium">We supply highly quality organic products</p>
-                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-5 md:mb-20">Shop Now</button>
+                        <h1 class=" md:mt-10 mb-md:mb-5 text-3xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
+                        <p class="mb-5 font-medium">We supply highly quality organic products</p>
+                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-20 md:mb-40 hover:text-[#F85559] hover:bg-white">Shop Now</button>
                       </div>
                     </div>
                   </div>
@@ -114,9 +114,9 @@
                     <div class="hero-overlay bg-opacity-60"></div>
                     <div class="hero-content text-center text-neutral-content">
                       <div class="max-w-md">
-                        <h1 class="mt-10 mb-5 md:mb-5 text-4xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
-                        <p class="mb-6 font-medium">We supply highly quality organic products</p>
-                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-5 md:mb-20">Shop Now</button>
+                        <h1 class="md:mt-10 mb-md:mb-5 text-3xl md:text-5xl font-extrabold">Exotic tastes at your <br>doorstep</h1>
+                        <p class="mb-5 font-medium">We supply highly quality organic products</p>
+                        <button class="btn btn-primary bg-[#F85559] border-[#F85559] mb-20 md:mb-40 hover:text-[#F85559] hover:bg-white">Shop Now</button>
                       </div>
                     </div>
                   </div>
