--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 <body>
     <header class="container mx-auto my-5">
-        <div class="navbar lg:bg-orange-600 rounded-[600px] text-black lg:text-white">
+        <div class="navbar lg:bg-orange-600 rounded-[600px] text-black lg:text-white lg:p-3">
             <div class="navbar-start">
-                <ul class="menu menu-horizontal px-1 hidden lg:flex">
+                <ul class="menu menu-horizontal px-1 hidden lg:flex font-medium">
                     <li><a>Home</a></li>
                     <li><a>About Us</a></li>
                     <li><a>Shop</a></li>
@@ -46,10 +46,10 @@
                     <input type="text" placeholder="Search" class="input input-bordered border-0 w-24 md:w-auto rounded-[60px] hidden lg:block"/>  
                 </div>
                     <div class="dropdown dropdown-left">
-                        <label tabindex="0" class="btn btn-ghost lg:hidden">
+                        <label tabindex="0" class="btn btn-ghost lg:hidden focus:mb-20">
                           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                         </label>
-                        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3  shadow bg-base-100 bg-opacity-10 rounded-box w-40">
+                        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3  shadow bg-base-100 bg-opacity-10 rounded-box w-40 font-medium">
                             <li><a>Home</a></li>
                             <li><a>About Us</a></li>
                             <li><a>Shop</a></li>
@@ -59,8 +59,8 @@
             </div>
           </div>
           <!-- banner section -->
-          <div class="p-2 lg:p-0">
-          <div class="carousel w-full mt-5">
+          <div class="p-2 lg:p-2">
+          <div class="carousel w-full mt-5 rounded-xl">
             <div id="slide1" class="carousel-item relative w-full">
                 <div class="hero" style="background-image: url(images/banner1.png);">
                     <div class="hero-overlay bg-opacity-60"></div>
@@ -124,6 +124,31 @@
                 <a href="#slide3" class="btn btn-circle text-white bg-[#121212] border-black">❮</a> 
                 <a href="#slide1" class="btn btn-circle text-white bg-[#121212] border-black">❯</a>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-center relative mx-5">
+        <div class="lg:p-10 flex flex-row flex-wrap justify-center md:gap-[10px] lg:gap-[90px] bg-base-100 shadow-xl rounded-lg absolute top-5 md:-top-32">
+            <div class="">
+                <img class="" src="images/fruit1.png" alt="">
+              <p class="text-center">Grapes</p>
+            </div>
+            <div>
+                <img class="w-fit" src="images/fruit2.png" alt="">
+              <p class="text-center">Orange</p>
+            </div>
+            <div>
+                <img class="w-fit" src="images/fruit3.png" alt="">
+              <p class="text-center">Mango</p>
+            </div>
+            <div>
+                <img class="w-fit" src="images/fruit4.png" alt="">
+              <p class="text-center" >Strawberry</p>
+            </div>
+            <div>
+                <img class="w-fit" src="images/fruit5.png" alt="">
+              <p class="text-center">Ataa</p>
+            </div>
             </div>
           </div>
         </div>
