--- a/index.html
+++ b/index.html
@@ -12,21 +12,10 @@
         font-family: 'Lato', sans-serif;
       }
     </style>
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
-      </script>
 </head>
 <body>
     <header class="container mx-auto my-5">
-        <div class="navbar lg:bg-orange-600 rounded-[600px] text-black lg:text-white lg:p-3">
+        <div class="navbar lg:bg-orange-600 rounded-[600px] text-black lg:text-white lg:p-3 relative z-50">
             <div class="navbar-start">
                 <ul class="menu menu-horizontal px-1 hidden lg:flex font-medium">
                     <li><a>Home</a></li>
@@ -46,7 +35,7 @@
                     <input type="text" placeholder="Search" class="input input-bordered border-0 w-24 md:w-auto rounded-[60px] hidden lg:block"/>  
                 </div>
                     <div class="dropdown dropdown-left">
-                        <label tabindex="0" class="btn btn-ghost lg:hidden focus:mb-20">
+                        <label tabindex="0" class="btn btn-ghost lg:hidden">
                           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                         </label>
                         <ul tabindex="0" class="menu menu-sm dropdown-content mt-3  shadow bg-base-100 bg-opacity-10 rounded-box w-40 font-medium">
@@ -59,7 +48,7 @@
             </div>
           </div>
           <!-- banner section -->
-          <div class="p-2 lg:p-2">
+          <div class="p-2">
           <div class="carousel w-full mt-5 rounded-xl">
             <div id="slide1" class="carousel-item relative w-full">
                 <div class="hero" style="background-image: url(images/banner1.png);">
@@ -127,8 +116,8 @@
             </div>
           </div>
         </div>
-        <div class="flex justify-center relative mx-5">
-        <div class="lg:p-10 flex flex-row flex-wrap justify-center md:gap-[10px] lg:gap-[90px] bg-base-100 shadow-xl rounded-lg absolute top-5 md:-top-32">
+        <div class="flex justify-center mx-5">
+        <div class="hidden md:flex flex-wrap justify-center md:p-10 lg:p-20 md:gap-[10px] lg:gap-[90px] bg-base-100 shadow-xl rounded-lg -mt-32 relative z-50">
             <div class="">
                 <img class="" src="images/fruit1.png" alt="">
               <p class="text-center">Grapes</p>
@@ -153,5 +142,42 @@
           </div>
         </div>
     </header>
+
+    <main class="container mx-auto p-3">
+       <section>
+        <div class="flex flex-col lg:flex-row justify-between items-center">
+            <div class="md:flex-1">
+                <h2 class="text-5xl font-extrabold mb-5 text-center">Deal of the day</h2>
+                <p class="mb-5 text-gray-600 text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div class="grid grid-flow-col gap-5 text-center auto-cols-max flex-1 justify-end">
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl font-extrabold mb-2 text-slate-600">
+                    <span style="--value:15;"></span>:
+                  </span>
+                  Days
+                </div> 
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl font-extrabold mb-2 text-slate-600">
+                    <span style="--value:10;"></span>:
+                  </span>
+                  Hours
+                </div> 
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl font-extrabold mb-2 text-slate-600">
+                    <span style="--value:24;"></span>:
+                  </span>
+                  Minutes
+                </div> 
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl font-extrabold mb-2 text-slate-600">
+                    <span style="--value:11;">:</span>
+                  </span>
+                  Seconds
+                </div>
+              </div>
+        </div>
+       </section>
+    </main>
 </body>
 </html>
