meet the team section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Fruit Burst</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/3fed0b11a1.js" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
       *{
@@ -295,17 +296,17 @@
               <div class="mt-5 border-[1px] w-[244px]"></div>
               <p class="mt-5 text-[#121212]">Red Dragon</p>
               <div class="mt-5 rating rating-lg rating-half">
-                <input type="radio" name="rating-10" class="rating-hidden" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-12" class="rating-hidden" />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
               </div>
               <div class="mt-5 card-actions">
                 <!-- Open the modal using ID.showModal() method -->
@@ -318,17 +319,17 @@
     <h3 class="font-extrabold text-4xl">Red Dragon</h3>
     <p class="py-4 font-meduim text-[#121212]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
     <div class="mt-4 rating rating-lg rating-half">
-      <input type="radio" name="rating-10" class="rating-hidden" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-12" class="rating-hidden" />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
     </div>
     <div class="modal-action flex justify-center gap-5">
       <!-- if there is a button in form, it will close the modal -->
@@ -349,17 +350,17 @@
               <div class="mt-5 border-[1px] w-[244px]"></div>
               <p class="mt-5 text-[#121212]">Banana</p>
               <div class="mt-5 rating rating-lg rating-half">
-                <input type="radio" name="rating-10" class="rating-hidden" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-                <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-13" class="rating-hidden" />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
               </div>
               <div class="mt-5 card-actions">
                 <!-- Open the modal using ID.showModal() method -->
@@ -372,17 +373,17 @@
     <h3 class="font-extrabold text-4xl">Banana</h3>
     <p class="py-4 font-meduim text-[#121212]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
     <div class="mt-4 rating rating-lg rating-half">
-      <input type="radio" name="rating-10" class="rating-hidden" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
-      <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-13" class="rating-hidden" />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+      <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
     </div>
     <div class="modal-action flex justify-center gap-5">
       <!-- if there is a button in form, it will close the modal -->
@@ -395,7 +396,63 @@
             </div>
           </div>
         </div>
-        
+       </section>
+       <div class="mt-10 text-center">
+        <button class="btn border-orange-500 bg-orange-500 text-white hover:bg-white hover:text-orange-500">Shop All</button>
+       </div>
+
+       <section class="mt-10 lg:mt-20">
+        <div class="hero" style="background-image: url(images/team.png);">
+          <div class="hero-overlay bg-opacity-80"></div>
+          <div class="hero-content text-center text-neutral-content py-20 lg:py-40">
+            <div>
+              <h1 class="mb-10 text-5xl font-extrabold">Meet the team section</h1>
+              <p class="mb-5 text-sm">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
+            <div class="mt-20 flex justify-center flex-wrap items-center gap-x-40 gap-y-10">
+              <div>
+                <img src="images/member1.png" alt="" class="rounded-full">
+                <h1 class="font-semibold mt-5">Awlad Hossain</h1>
+                <p class="">Fruits Expert</p>
+                 <div class="flex gap-1 justify-center mt-3">
+                  <i class="fa-brands fa-facebook text-xl" style="color: #f24207;"></i>
+                  <i class="fa-brands fa-square-twitter text-xl" style="color: #e73508;"></i>
+                  <i class="fa-brands fa-linkedin text-xl" style="color: #e60a0a;"></i>
+                 </div>
+              </div>
+              <div>
+                <img src="images/member4.png" alt="" class="rounded-full">
+                <h1 class="font-semibold mt-5">Chaity</h1>
+                <p class="">Fruits Expert</p>
+                 <div class="flex gap-1 justify-center mt-3">
+                  <i class="fa-brands fa-facebook text-xl" style="color: #f24207;"></i>
+                  <i class="fa-brands fa-square-twitter text-xl" style="color: #e73508;"></i>
+                  <i class="fa-brands fa-linkedin text-xl" style="color: #e60a0a;"></i>
+                 </div>
+              </div>
+              <div>
+                <img src="images/member2.png" alt="" class="rounded-full">
+                <h1 class="font-semibold mt-5">Safia Chowdhury</h1>
+                <p class="">Fruits Expert</p>
+                 <div class="flex gap-1 justify-center mt-3">
+                  <i class="fa-brands fa-facebook text-xl" style="color: #f24207;"></i>
+                  <i class="fa-brands fa-square-twitter text-xl" style="color: #e73508;"></i>
+                  <i class="fa-brands fa-linkedin text-xl" style="color: #e60a0a;"></i>
+                 </div>
+              </div>
+              <div>
+                <img src="images/member3.png" alt="" class="rounded-full">
+                <h1 class="font-semibold mt-5">Rokib Hossain</h1>
+                <p class="">Fruits Expert</p>
+                 <div class="flex gap-1 justify-center mt-3">
+                  <i class="fa-brands fa-facebook text-xl" style="color: #f24207;"></i>
+                  <i class="fa-brands fa-square-twitter text-xl" style="color: #e73508;"></i>
+                  <i class="fa-brands fa-linkedin text-xl" style="color: #e60a0a;"></i>
+                 </div>
+              </div>
+            </div>
+            </div>
+      </div>
+          </div>
        </section>
     </main>
 </body>
